<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/post_linear_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/post_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/post_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/post_image"
                android:text="@string/shakeel_haider"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/post_name"
                app:layout_constraintStart_toEndOf="@id/post_image"
                android:text="@string/_13_april_2020"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"/>

            <View
                android:id="@+id/post_view_line"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#dfdfdf"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toTopOf="@+id/post_detail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/post_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/post_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/hello_my_name_is_shakeel_haider_and_i_am_full_stack_python_3_x_and_java_11_developer"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />


            <Button
                android:id="@+id/post_like"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/post_comment"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <Button
                android:id="@+id/post_share"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>