<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DisplayProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/display_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_launcher"
        />

    <Button
        android:id="@+id/display_request_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display_image"
        android:layout_marginTop="20sp"
        android:text="@string/friend_request_button"
        android:visibility="gone"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display_request_button"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:stretchColumns="1"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/image"
                />

            <TextView
                android:id="@+id/display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shakeel_haider"
                android:textAllCaps="true"
                android:textSize="25sp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/image"
                />

            <TextView
                android:id="@+id/display_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shakeel_haider"
                android:textAllCaps="false"
                android:textSize="25sp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/image"
                />

            <TextView
                android:id="@+id/display_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shakeel_haider"
                android:textSize="25sp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/image"
                />

            <TextView
                android:id="@+id/display_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shakeel_haider"
                android:textAllCaps="true"
                android:textSize="25sp"
                />

        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/display_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:text="@string/start_chat_button"
        android:textSize="20sp"
        />

    

</androidx.constraintlayout.widget.ConstraintLayout>